# VoltEngine

./: .gitignore  BuildVoltEngineWindows.bat  CMakeLists.txt  README.md
shaders/HLSL/: ObjectShaders.hlsl  PixelShader.spv  UIObjectShaders.hlsl  UIPixelShader.spv  UIVertexShader.spv  VertexShader.spv  compile.sh
source/: main.cpp
source/Components/: Camera.h  Cube.h  DemoBehavior.cpp  DemoBehavior.h  FirstPersonController.cpp  FirstPersonController.h  GLTFModel.cpp  GLTFModel.h  LightSource.h  MeshRenderer.cpp  MeshRenderer.h  Tetrahedron.h  Text.cpp  Text.h  Transform.h  UIImage.cpp  UIImage.h  UIMeshRenderer.cpp  UIMeshRenderer.h
source/Management/: Material.cpp  Material.h  MaterialRegistry.cpp  MaterialRegistry.h  Scene.cpp  Scene.h  VoltEngine.cpp  VoltEngine.h  WindowManager.cpp  WindowManager.h
source/Materials/: GenericObjectMaterial.cpp  GenericObjectMaterial.h  GenericUIObjectMaterial.cpp  GenericUIObjectMaterial.h
source/Objects/: ObjectComponent.cpp  ObjectComponent.h  RenderObject.cpp  RenderObject.h
source/Text Rendering/: Font.cpp  Font.h  FontManager.h
source/Vulkan Interface/: GraphicsBuffer.cpp  GraphicsBuffer.h  GraphicsImage.cpp  GraphicsImage.h  GraphicsPipeline.cpp  GraphicsPipeline.h  TextureImage.cpp  TextureImage.h  VulkanCommonFunctions.cpp  VulkanCommonFunctions.h  VulkanInterface.cpp  VulkanInterface.h  VulkanWindow.cpp  VulkanWindow.h  VulkanWindowRenderer.cpp  VulkanWindowRenderer.h
